# qc-data-generator

./: .gitignore  CHANGELOG.md  CLAUDE.md  LEAN_Data_Investigation.md  LICENSE  README.md  data_analyzer.py  fast_options_generator.py  pyproject.toml  requirements.txt  run.sh  tasks.md  test_generator.py
.claude/: settings.local.json
.claude/agents/: qc-architecture-agent.md  qc-dev-agent.md  qc-runner-agent.md
